<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- colors for the app -->
    <color name="green">#269926</color>
    <color name="yellow">#B9F73E</color>
    <color name="red">#e30000</color>

    <!-- Strings for Menu -->
    <string name="app_name">Recipe King</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menuViewAll">View Recipes</string>
    <string name="menuAddNew">Add New Recipe</string>
    <string name="menuSearch">Search By Ingredients</string>
    <string name="menuHeader">Recipe King</string>
    <string name="menuLogout">Logout</string>

    <!-- Add Recipes Activity Strings -->
    <string name="btnAddText">Add Recipe</string>

    <!-- Search Activity Strings -->
    <string name="searchButton">Search For Recipe</string>
    <string name="searchTextLabel">Please Enter Recipe Name</string>
    <string name="searchTextHint">something like "guacamole dip" would do well</string>

    <!-- Login Activity Strings -->
    <string name="loginHeader">Recipe King Login</string>
    <string name="loginEmailLabel">Email</string>
    <string name="loginPasswordLabel">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="loginTextToRegister">No Account? Create an Account!</string>

    <!-- Registration Activity Strings -->
    <string name="registerHeader">Recipe King Register</string>
    <string name="registerEmailLabel">Email</string>
    <string name="registerEmailHint">Your Email, ex john@doe.com</string>
    <string name="registerNameLabel">Name</string>
    <string name="registerNameHint">Your Full Name</string>
    <string name="registerPasswordLabel">Password</string>
    <string name="registerPasswordHint">Password</string>
    <string name="registerButtonText">Register</string>
    <string name="registerTextToLogin">Already have an account? Login!</string>

</resources>
