<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:gravity="center_horizontal">

    <!-- Header Text for App -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuHeader"
        android:gravity="center"
        android:textSize="44sp"
        android:textAlignment="center"
        android:textAllCaps="true"/>

    <!--  Button to view all recipe screen -->
    <Button android:id="@+id/btnViewProducts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuViewAll"
        android:background="@color/green"
        android:layout_marginTop="25dip"/>

    <!--  Button to create a new recipe screen -->
    <Button android:id="@+id/btnCreateProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuAddNew"
        android:background="@color/green"
        android:layout_marginTop="25dip"/>

    <!-- Button to search for a recipe screen -->
    <Button
        android:id="@+id/btnSearchRecipe"
        android:text="@string/menuSearch"
        android:layout_marginTop="25dip"
        android:layout_width="fill_parent"
        android:background="@color/green"
        android:layout_height="wrap_content" />



</LinearLayout>
