<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <!-- Header Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/loginHeader"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <!-- Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginEmailLabel"
            />
        
        <!-- Email Text Box -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/loginEmail"/>

        <!-- Password Label-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginPasswordLabel"/>

        <!-- Password Text Box -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/loginPassword"/>

        <!-- Error Message -->
        <TextView android:id="@+id/login_error"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/red"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dip"
            android:background="@color/green"
            android:text="@string/loginButtonText" />

        <!-- Registration Link -->
        <Button
            android:id="@+id/btnLinkRegistration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/loginTextToRegister"
            android:textColor="@color/green"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>